--- a/quartz-spring/pom.xml
+++ b/quartz-spring/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.xw</groupId>
+            <artifactId>xwCommon</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
