--- a/xwTask/pom.xml
+++ b/xwTask/pom.xml
@@ -50,6 +50,21 @@
 
     <build>
         <finalName>xwTask</finalName>
+
+        <plugins>
+            <!-- java编译插件 -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <!-- 指定端口 -->
+                    <port>9101</port>
+                    <!-- 请求路径 -->
+                    <path>/</path>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
